--- a/project-manager.html
+++ b/project-manager.html
@@ -45,7 +45,7 @@
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=o5nSafwe&__jvst=Employee&__jvsd=sBKSFgwD&__jvsc=Twitter&bid=nStOmMwM'>Guidewire Software, Inc. Careers - Senior Cloud Transition Project Manager, Professional Services- Remote,US</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698340729-electrical-vehicle-project-manager-ps'>Bosch Group Electrical Vehicle Project Manager/?????????_PS | SmartRecruiters</a></h5> 
@@ -92,7 +92,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/zetaglobal/job/oafpbfwJ'>Zeta Global Careers - Project Manager - Analytics</a></h5> 
+<h5><a href='https://jobs.jobvite.com/zetaglobal/job/oafpbfwJ'>Zeta Global Careers - Project Manager - Analytics</a></h5> 
 <p><span class="badge badge-light">Prague</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -100,7 +100,7 @@
 <p><span class="badge badge-light">Sunnyvale, CA Sunnyvale</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Square/743999698331113-senior-program-manager-square-ecommerce'>Square Senior Program Manager, Square eCommerce | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999698331113-senior-program-manager-square-ecommerce'>Square Senior Program Manager, Square eCommerce | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA  United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -118,7 +118,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ca.indeed.com/job/assistant-project-manager-site-labour-4219c5504c8d2063'>Assistant to Project Manager-Site Labour - Niagara Falls, ON - Indeed.com</a></h5> 
+<h5><a href='https://ca.indeed.com/job/assistant-project-manager-site-labour-4219c5504c8d2063'>Assistant to Project Manager-Site Labour - Niagara Falls, ON - Indeed.com</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -158,7 +158,7 @@
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/K4Connect/743999698321278-field-project-manager'>K4Connect Field Project Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/K4Connect/743999698321278-field-project-manager'>K4Connect Field Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -174,7 +174,7 @@
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/nasuni/job/owLpbfwB'> Nasuni Careers - Principal Technical Program Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nasuni/job/owLpbfwB'> Nasuni Careers - Principal Technical Program Manager</a></h5> 
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -200,7 +200,7 @@ Construction Project Manager - CAPEX in Coral Springs, from Custom Executive Sea
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.themuse.com/jobs/mattel/sr-project-manager-it?utm_source=twitter&utm_medium=social&utm_campaign=twjobs_mattel_11859_october2019'>
+<h5><a href='https://www.themuse.com/jobs/mattel/sr-project-manager-it?utm_source=twitter&utm_medium=social&utm_campaign=twjobs_mattel_11859_october2019'>
 
 Sr Project Manager IT | El Segundo, CA | Mattel
 
@@ -228,7 +228,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999698315631-technical-project-manager-gsm-cdma-4g-5g-lte-mobile-projects-korean-speaking-is-mandatory'>Bey Technical Project Manager (GSM/CDMA/4G/5G LTE)?? Mobile Projects - KOREAN SPEAKING IS MANDATORY | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698315631-technical-project-manager-gsm-cdma-4g-5g-lte-mobile-projects-korean-speaking-is-mandatory'>Bey Technical Project Manager (GSM/CDMA/4G/5G LTE)?? Mobile Projects - KOREAN SPEAKING IS MANDATORY | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bellevue Bellevue, WA Bellevue, WA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -304,7 +304,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://hologic.referrals.selectminds.com/jobs/field-installation-project-manager-ga-al-ms-tn-3027'>Field Installation Project Manager - GA, AL, MS, TN - Hologic Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hologic.referrals.selectminds.com/jobs/field-installation-project-manager-ga-al-ms-tn-3027'>Field Installation Project Manager - GA, AL, MS, TN - Hologic Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -312,7 +312,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light">Chicago United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/unispace/c1ab631e-fb9b-4491-8ac1-c7463b0cb461'>Unispace - Senior Project Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/unispace/c1ab631e-fb9b-4491-8ac1-c7463b0cb461'>Unispace - Senior Project Manager</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -320,7 +320,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://burnsmcdonn.referrals.selectminds.com/jobs/remediation-project-manager-6789'>Remediation Project Manager - Burns & McDonnell Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://burnsmcdonn.referrals.selectminds.com/jobs/remediation-project-manager-6789'>Remediation Project Manager - Burns & McDonnell Careers</a></h5> 
 <p><span class="badge badge-light">Los Angeles, California United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -354,7 +354,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/teamviewer-global/job/oCwpbfws'>TeamViewer Global Careers - Senior Project Manager (m/f/d)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/teamviewer-global/job/oCwpbfws'>TeamViewer Global Careers - Senior Project Manager (m/f/d)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -362,7 +362,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light">Bucharest, Romania</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698267088-epv-sub-project-manager-software-spjm-sw-'>Bosch Group EPV - Sub-Project Manager Software (SPjM SW) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698267088-epv-sub-project-manager-software-spjm-sw-'>Bosch Group EPV - Sub-Project Manager Software (SPjM SW) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -370,7 +370,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/indigo/jobs/1931884'>Job Application for Project Manager, DevOps at Indigo</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/indigo/jobs/1931884'>Job Application for Project Manager, DevOps at Indigo</a></h5> 
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -448,7 +448,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light">Fairfax, VA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kimmel-associates.breezy.hr/p/f0cf6071b865-project-engineer-assistant-project-manager'>Project Engineer - Assistant Project Manager</a></h5> 
+<h5><a href='https://kimmel-associates.breezy.hr/p/f0cf6071b865-project-engineer-assistant-project-manager'>Project Engineer - Assistant Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 17, 2019 ... About the Company:A heavy civil construction company with more than 100 
 years of experience in structural evaluation, forming and falsework analysis,?...</p>
