--- a/web-developer.html
+++ b/web-developer.html
@@ -58,7 +58,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://artisantalent.com/jobs/chicago/ux-architect/46134?utm_content=104251457&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
+<h5><a href='https://artisantalent.com/jobs/chicago/ux-architect/46134?utm_content=104251457&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
 <p><span class="badge badge-light">Cincinnati, OH  Chicago, IL  Denver, CO  Indianapolis, IN  Los Angeles, CA  New York, NY  San Francisco, CA  Washington, DC</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -230,7 +230,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-25</p>
 <hr/>
-<h5><a href='https://serviceplan.softgarden.io/job/1175416/Werkstudent-Web-Development-E-Dialog-m-w-x-?jobDbPVId=14270842&amp;l=en'>Werkstudent Web Development / E-Dialog (m/w/x)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://serviceplan.softgarden.io/job/1175416/Werkstudent-Web-Development-E-Dialog-m-w-x-?jobDbPVId=14270842&amp;l=en'>Werkstudent Web Development / E-Dialog (m/w/x)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -279,7 +279,7 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<h5><a href='https://dribbble.com/jobs/24562-Senior-Web-Developer?source=twitter'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/24562-Senior-Web-Developer?source=twitter'>
       Senior Web Developer at Persado - San Franciso, CA - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -419,7 +419,7 @@ Chenega Corporation Jobs - Front End Web Developer in Columbia, Maryland, United
 <p><span class="badge badge-light">Baltimore, MD</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ESLEducation/743999697855162-web-development-manager'>ESL Education Web Development Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ESLEducation/743999697855162-web-development-manager'>ESL Education Web Development Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -435,7 +435,7 @@ Chenega Corporation Jobs - Front End Web Developer in Columbia, Maryland, United
 <p><span class="badge badge-light">Cincinnati, OH  Chicago, IL  Denver, CO  Indianapolis, IN  Los Angeles, CA  New York, NY  San Francisco, CA  Washington, DC</span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/hylinkgroup/0be5e84c-8e4e-40f9-9801-0348d32712a7'>Hylink Digital Solutions - Back-End Web Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/hylinkgroup/0be5e84c-8e4e-40f9-9801-0348d32712a7'>Hylink Digital Solutions - Back-End Web Developer</a></h5> 
 <p><span class="badge badge-light">Los Angeles  Los Angeles</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
